Wrong width on SM screens, uncentered paragraph on events section and filters on SM screens fixed

--- a/styles.css
+++ b/styles.css
@@ -756,6 +756,7 @@ p.work-hours {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   position: relative;
 }
 
@@ -871,7 +872,6 @@ h3 {
 **********/
 #contact {
   width: 100%;
-  min-height: 100vh;
   background: #fff;
   padding-top: 200px;
   text-align: center;
@@ -1078,6 +1078,10 @@ footer p {
     width: 102%;
   }
 
+  .events-lines {
+    grid-template-columns: 1fr 648px 1fr;
+  }
+
   /* Contact */
   .contact {
     padding: 0 1rem;
@@ -1237,6 +1241,10 @@ footer p {
   /* Events */
   .events {
     grid-template-columns: 1fr;
+  }
+
+  .events-lines {
+    grid-template-columns: 1fr 496px 1fr;
   }
 
   .events-left,
@@ -1453,6 +1461,11 @@ footer p {
     width: 100%;
   }
   /* Events */
+
+  .events-lines {
+    grid-template-columns: 1fr 5fr 1fr;
+  }
+
   .events-left,
   .events-right {
     padding: 25px 1rem;
